주석및 모바일 추가

--- a/ex/conditionLoop.html
+++ b/ex/conditionLoop.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8" /> 
+<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+<meta name="format-detection" content="telephone=no"/>
 <title>vue</title>
-<link rel="stylesheet" href="https://hyobase-572cb.firebaseapp.com/resources/css/default.css" type="text/css" />
+<link rel="stylesheet" href="../resources/css/default.css" type="text/css" />
 <script src="https://unpkg.com/vue"></script>
 </head>
 <body>
