--- a/ex/start.html
+++ b/ex/start.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8" /> 
+<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+<meta name="format-detection" content="telephone=no"/>
 <title>vue</title> <!-- https://kr.vuejs.org/v2/guide/index.html -->
 <link rel="stylesheet" href="../resources/css/default.css" type="text/css" />
 <script src="https://unpkg.com/vue"></script>
