스타일 추가 1

--- a/myapp1/contentsList.html
+++ b/myapp1/contentsList.html
@@ -22,13 +22,19 @@
 
 </head>
 <body>
-<div class="header">
-<span class="logo">리스트</span>
+<div id="root-container">
+	<div id="header-container">
+		<div id="main-nav"></div>
+		<div id="search-box"></div>
+	</div>
+	
+	<div id="main-container">
+	</div>
 </div>
 
 <script type="text/javascript">
 
-var app3;	
+
 	
 </script>
 
